src/test/ui/issues/issue-16250.stderr
error: `extern` block uses type `Foo`, which is not FFI-safe
  --> $DIR/issue-16250.rs:6:20
   |
LL |     pub fn foo(x: (Foo));
   |                    ^^^ not FFI-safe
   |
note: lint level defined here
  --> $DIR/issue-16250.rs:1:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(improper_ctypes)]` implied by `#[deny(warnings)]`
   = help: consider adding a `#[repr(C)]` or `#[repr(transparent)]` attribute to this struct
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
=======
   = note: this struct has unspecified layout
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
note: type defined here
  --> $DIR/issue-16250.rs:3:1
   |
LL | pub struct Foo;
   | ^^^^^^^^^^^^^^^

error: aborting due to previous error

